# search-engine

./: .clang-format  .gitignore  .gitmodules  .tm_properties  CMakeLists.txt  README.md  build-index.cpp  crawler.cpp  depr.volatile.type.html  expr.html  index.html  min.html  strip.cpp  test.html
cmake/: colors.cmake  coverage.cmake  fuzzing.cmake
include/: CMakeLists.txt
include/crawler/: index.hpp  strip-tags.cpp  strip-tags.hpp
web/: .htaccess  index.html  offenders.php  server.py  string.js  style.css
web/index/: .gitignore
